<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/buttonAdmin"
            style="@style/CommonButtonStyle"
            android:text="@string/admin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonBob"
            style="@style/CommonButtonStyle"
            android:text="@string/bob"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonAdmin" />

        <Button
            android:id="@+id/buttonAndrew"
            style="@style/CommonButtonStyle"
            android:text="@string/andrew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonBob" />

        <Button
            android:id="@+id/buttonJohn"
            style="@style/CommonButtonStyle"
            android:text="@string/john"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonAndrew" />

        <Button
            android:id="@+id/buttonMax"
            style="@style/CommonButtonStyle"
            android:text="@string/max"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonJohn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>