<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <TextView
        android:id="@+id/textViewGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Hello bob" />

    <Button
        android:id="@+id/buttonChatAdmin"
        style="@style/CommonButtonStyle"
        android:text="@string/chat_with_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewGreeting" />

    <Button
        android:id="@+id/buttonChatBob"
        style="@style/CommonButtonStyle"
        android:text="@string/chat_with_bob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonChatAdmin" />

    <Button
        android:id="@+id/buttonChatAndrew"
        style="@style/CommonButtonStyle"
        android:text="@string/chat_with_andrew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonChatBob" />

    <Button
        android:id="@+id/buttonChatJohn"
        style="@style/CommonButtonStyle"
        android:text="@string/chat_with_john"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonChatAndrew" />

    <Button
        android:id="@+id/buttonChatMax"
        style="@style/CommonButtonStyle"
        android:text="@string/chat_with_max"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonChatJohn" />

</androidx.constraintlayout.widget.ConstraintLayout>
